# cellpop

./: .gitignore  README.md  blosc-537fd004-BKoaCnhj.js  browser-122c4c35-DVZ3KnL6.js  deflate-b2db2606-B4-oNlR3.js  drag_example.js  eslint.config.js  example.ipynb  index.es.js  index.html  index.jsx  jpeg-4eb208e2-Cim0rnLq.js  lerc-488045ad-cw0EHAsT.js  lz4-bbd18009-WrzHfuNA.js  lzw-7dbd05ec-C0wZMNR0.js  main.js  missing-types.d.ts  package.json  packbits-86870a09-CnpP-9_Y.js  pnpm-lock.yaml  raw-997b5663-CbU0YAeM.js  sizing.js  style.css  tsconfig.json  vite.config.ts  webimage-fc1b5b38-Cy4nH0M0.js  zlib-175cd38d-BuXbIjPW.js  zstd-ec5a40b8-BfTfdBCc.js
assets/: deflate-9cfe31b4--UOSjJNF.js  deflate-9cfe31b4-7YBMQGjZ.js  deflate-9cfe31b4-EK1Ypp5z.js  gzip-dd5ab7c8-wU2g_iAo.js  jpeg-e623e3f3-MT_DNH60.js  jpeg-e623e3f3-YCPYlkuQ.js  jpeg-e623e3f3-tjEwHJtK.js  lerc-3b89a300-5DhVOprF.js  lerc-3b89a300-7N0EemQr.js  lerc-3b89a300-TuOOlTso.js  lzw-834edf30-0njj13Xc.js  lzw-834edf30-LeNGOUqG.js  lzw-834edf30-mXjIsuhF.js  packbits-37beb194-7UEhLjsL.js  packbits-37beb194-TNODvXFM.js  packbits-37beb194-fKqmk4nw.js  pako.esm-68f84e2a-tSdR82fX.js  pako.esm-856454b6-c5c8cd15-LlE9m97O.js  raw-f349901d-8kTBzGKa.js  raw-f349901d-_iueXgAy.js  raw-f349901d-whtBA5Mu.js  webimage-89dafa8c-GSjG_GJZ.js  webimage-89dafa8c-oz4myw_1.js  webimage-89dafa8c-tJ_h1vk0.js  (+1 more)
python/: .gitignore  CONTRIBUTING.md  README.md  example.ipynb  package.json  pnpm-lock.yaml  pyproject.toml  simulate_data.ipynb
python/js/: widget.tsx
python/src/cellpop/: __init__.py
python/src/cellpop/static/: widget.css
(+154 files in other folders)
